--- a/README.Rmd
+++ b/README.Rmd
@@ -136,7 +136,7 @@ See the vignette for other examples that include inference on attributable risk 
 
 # References
 
-Sung Jae Jun and Sokbae Lee. (2023). Causal Inference under Outcome-Based Sampling with Monotonicity Assumptions. 
+Jun, S.J. and Lee, S. (2023). Causal Inference under Outcome-Based Sampling with Monotonicity Assumptions. 
 https://arxiv.org/abs/2004.08318, accepted for publication in Journal of Business & Economic Statistics.
 
 Manski, C.F. (1997). Monotone Treatment Response. Econometrica, 65(6), 1311-1334.
