--- a/vignettes/ciccr-vignette.Rmd
+++ b/vignettes/ciccr-vignette.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Causal Inference in Case-Control Studies: Vignette"
+title: "Causal Inference in Case-Control and Case-Population Studies: Vignette"
 output: rmarkdown::html_vignette
 description: >
-  This vignette describes how to use package "ciccr" that is based on the paper entitled "Causaul Inference in Case-Control Studies" by Jun and Lee.
+  This vignette describes how to use package "ciccr" that is based on the paper entitled "Causal Inference under Outcome-Based Sampling with Monotonicity Assumptions" by Jun and Lee.
 vignette: >
-  %\VignetteIndexEntry{Causal Inference in Case-Control Studies: Vignette}
+  %\VignetteIndexEntry{Causal Inference in Case-Control and Case-Population Studies: Vignette}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -18,8 +18,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-This vignette describes how to use package "ciccr" that is based on the paper entitled  "Causal Inference in Case-Control Studies" ([Jun and Lee, 2020](https://arxiv.org/abs/2004.08318)). 
-
+This vignette describes how to use package "ciccr" that is based on the paper entitled  "Causal Inference under Outcome-Based Sampling with Monotonicity Assumptions" ([Jun and Lee, 2023](https://arxiv.org/abs/2004.08318)). 
 
 ## Causal Inference on Relative and Attributable Risk
 
@@ -31,7 +30,6 @@ We first load the ciccr and MASS packages.
 library(ciccr)
 library(MASS)
 ```
-
 
 To illustrate the usefulness of the package, we use the dataset ACS_CC that is included in the package. This dataset is an extract from American Community Survey (ACS) 2018, restricted to white males residing in California with at least a bachelor's degree. The ACS is an ongoing annual survey by the US Census Bureau that provides key information about the US population. We use the following variables:  
 
@@ -109,7 +107,7 @@ It is handy to examine the results by plotting a graph.
 cicc_plot(results)
 ```
 
-To interpret the results, we assume both marginal treatment response (MTR) and marginal treatment selection (MTS). In this setting, MTR means that everyone will earn no less by obtaining a degree higher than bachelor's degree; MTS indicates that those who selected into higher education have higher potential to earn top incomes. Based on the MTR and MTS assumptions, we can conclude that the treatment effect lies in between 1 and the upper end point of the one-sided confidence interval with high probability. Thus, the estimates in the graph above suggest that the effect of obtaining a degree higher than bachelor's degree is anywhere between 1 and the upper end points of the uniform confidence bands. This roughly implies that the chance of earning top incomes may increase up to by a factor as large as the upper end points of the uniform confidence band, but allowing for possibility of no positive effect at all.  The results are shown over the range of the unknown true case probability. See [Jun and Lee, 2020](https://arxiv.org/abs/2004.08318) for more detailed explanations regarding how to interpret the estimation results.   
+To interpret the results, we assume both marginal treatment response (MTR) and marginal treatment selection (MTS). In this setting, MTR means that everyone will earn no less by obtaining a degree higher than bachelor's degree; MTS indicates that those who selected into higher education have higher potential to earn top incomes. Based on the MTR and MTS assumptions, we can conclude that the treatment effect lies in between 1 and the upper end point of the one-sided confidence interval with high probability. Thus, the estimates in the graph above suggest that the effect of obtaining a degree higher than bachelor's degree is anywhere between 1 and the upper end points of the uniform confidence bands. This roughly implies that the chance of earning top incomes may increase up to by a factor as large as the upper end points of the uniform confidence band, but allowing for possibility of no positive effect at all.  The results are shown over the range of the unknown true case probability. See [Jun and Lee, 2023](https://arxiv.org/abs/2004.08318) for more detailed explanations regarding how to interpret the estimation results.   
 
 ### Comparison with Logistic Regression
 
@@ -207,7 +205,7 @@ For case-population sampling, the upper bound on attributable risk is a linear f
 
 # References
 
-Sung Jae Jun and Sokbae Lee. Causal Inference in Case-Control Studies. 
+Sung Jae Jun and Sokbae Lee. (2023). Causal Inference under Outcome-Based Sampling with Monotonicity Assumptions. 
 https://arxiv.org/abs/2004.08318.
 
 Manski, C.F. (1997). Monotone Treatment Response. Econometrica, 65(6), 1311-1334.
